servers/at1-server/apps/home-assistant/esphome/ingress_route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: esphome
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`at1-esphome.dominikaschbacher.com`)
      kind: Rule
      services:
        - name: esphome
          port: 6052
  tls:
    certResolver: letsencrypt
